cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        untitled1
#                test.cpp

        #        Gichul_1_A.cpp
        #        Gichul_1_B.cpp

#        Week1_1_12171712_JaehyunCho.cpp
#        Week1_2_12171712_JaehyunCho.cpp
#        Week2_1_12171712_JaehyunCho.cpp
#        Week2_2_12171712_JaehyunCho.cpp
#        Week3_1_12171712_JaehyunCho.cpp
#        Week3_2_12171712_JaehyunCho.cpp
#        Week4_1_12171712_JaehyunCho.cpp
#        Week4_2_1_12171712_JaehyunCho.cpp
#        Week4_2_2_12171712_JaehyunCho.cpp
#        Week5_1_12171712_JaehyunCho.cpp
#        Week5_2_12171712_JaehyunCho.cpp
#        Week6_1_12171712_JaehyunCho.cpp
#        Week6_2_12171712_JaehyunCho.cpp
#        Week7_1_12171712_JaehyunCho.cpp
#        Week7_2_12171712_JaehyunCho.cpp
#        Week9_1_12171712_JaehyunCho.cpp
#        Week9_2_12171712_JaehyunCho.cpp
#        Week10_1_12171712_JaehyunCho.cpp
#        Week10_2_12171712_JaehyunCho.cpp
#        Week11_1_12171712_JaehyunCho.cpp
#        Week11_2_12171712_JaehyunCho.cpp
#        Week12_1_12171712_JaehyunCho.cpp
#        Week12_2_12171712_JaehyunCho.cpp
        Week13_1_12171712_JaehyunCho.cpp
#        Week13_2_12171712_JaehyunCho.cpp
)